--- a/Find_number_example_1.ipynb
+++ b/Find_number_example_1.ipynb
@@ -671,29 +671,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code สุดท้าย หลังจากปรับเรียบร้อยแล้ว"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 88,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-86-01e79dae5172>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-86-01e79dae5172>\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    store = [(i,j) for i in range(10) for j in range(10) if i+j=b]\u001b[0m\n\u001b[1;37m                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "คำถาม?: จงหาตัวเลข 4 หลัก ที่อยู่ระหว่าง 3500 ถึง 5000 โดยที่เลขหลักพันกับหลักหน่วยมีค่าเท่ากัน และเลขหลักร้อยบวกกับเลขหลักสิบได้เท่ากับ 9\n",
+      "คำตอบคือ  [3543, 3633, 3723, 3813, 3903, 4094, 4184, 4274, 4364, 4454, 4544, 4634, 4724, 4814, 4904]\n",
+      "มีทั้งหมด   15 ตัว\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
     "Max=5000\n",
     "Min=3500\n",
     "b=9 #ผลรวมของเลขหลักร้อยกับหลักสิบ\n",
     "\n",
     "print (\"คำถาม?: จงหาตัวเลข 4 หลัก ที่อยู่ระหว่าง 3500 ถึง 5000 โดยที่เลขหลักพันกับหลักหน่วยมีค่าเท่ากัน และเลขหลักร้อยบวกกับเลขหลักสิบได้เท่ากับ 9\")\n",
-    "store = [(i,j) for i in range(10) for j in range(10) if i+j=b]\n",
+    "store = [(i,j) for i in range(10) for j in range(10) if i+j==b]\n",
     "ten = [(i*100)+(j*10) for i,j in store]\n",
     "count = [(i*1000)+i for i in range(1,10)]\n",
     "ans = [count[j]+ten[i] for j in range(9) for i in range(10)]\n",
