--- a/Find_number_example_2.ipynb
+++ b/Find_number_example_2.ipynb
@@ -64,7 +64,9 @@
     "collapsed": true
    },
    "source": [
-    "#### เขียน code ได้ดี กระชับครับ แต่ยังตอบโจทย์ไม่ครบ เพราะคำตอบไม่ได้ต้องการ list แต่ต้องการตัวเลข ต้องเขียนต่ออีกสักนิดก็จะสมบูรณ์ดังนี้ครับ"
+    "#### เขียน code ได้ดีมาก กระชับ และมีการใช้ list comprehension พร้อมเงื่อนไขได้ดีมาก\n",
+    "ใช้กลยุทธ์ในการหักค่าออก โดยหาค่าที่ตรงตามเงื่อนไขจาก 3000-5000 ก่อน แล้วหักค่าของ 3000-3400 ออก\n",
+    "แต่ยังตอบโจทย์ไม่ครบ เพราะคำตอบไม่ได้ต้องการ list แต่ต้องการตัวเลข ต้องเขียนต่ออีกสักนิดก็จะสมบูรณ์ดังนี้ครับ"
    ]
   },
   {
